Added videoConstraints and a stopVideo action
- Also patched up the ui a bit, and added a About button

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,14 @@
 <body>
   <header>
     <h1>Realtime communication with WebRTC</h1>
+    <a href="https://github.com/deshmukhmayur/webrtc-video-chat" target="_blank" rel="noopener noreferrer">
+      About
+      <ion-icon name="open-outline"></ion-icon>
+    </a>
   </header>
 
   <main>
-    <video id="localVideo" autoplay playsinline></video>
+    <video id="localVideo" autoplay playsinline muted></video>
     <video id="remoteVideo" autoplay playsinline></video>
   </main>
 
